--- a/app.json
+++ b/app.json
@@ -23,7 +23,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "ACCESS_FINE_LOCATION"
+      ],
+      "package": "com.nicolasstophe.FreeleticsRun"
     },
     "web": {
       "favicon": "./assets/favicon.png"
